fix: adjust h1 text shadow positioning and dimensions for improved visibility

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,8 @@ h1 {
   h1:after {
     content: attr(data-shadow);
     position: absolute;
-    top: .06em; left: .06em;
+    top: .06em; 
+    left: .06em;
     z-index: -1;
     text-shadow: none;
     background-image:
@@ -96,7 +97,8 @@ h1 {
     background-size: .05em .05em;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-  
+    width: 100%;
+    height: 100%;
     animation: shad-anim 15s linear infinite;
     }
 
